[gd_scene load_steps=15 format=2]

[ext_resource path="res://Cards/CardBlank/blank_image.png" type="Texture" id=1]
[ext_resource path="res://Cards/CardBlank/blank_label.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Lora/Lora-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Cards/CardBlank/Card.gd" type="Script" id=6]
[ext_resource path="res://Cards/CardBlank/blank_cost.png" type="Texture" id=7]
[ext_resource path="res://Cards/CardBlank/blank_description.png" type="Texture" id=8]
[ext_resource path="res://Cards/CardBlank/blank_background.png" type="Texture" id=9]
[ext_resource path="res://Cards/CardBlank/blank_border.png" type="Texture" id=10]
[ext_resource path="res://Cards/CardBlank/focus_glow.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
font_data = ExtResource( 5 )

[node name="Card" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="FocusGlow" type="Sprite" parent="."]
texture = ExtResource( 11 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 0, -78 )
texture = ExtResource( 1 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Title" type="Node2D" parent="."]
position = Vector2( 0, -210 )

[node name="Background" type="Sprite" parent="Title"]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -26.0
margin_right = 135.5
margin_bottom = 26.0
rect_min_size = Vector2( 158, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.984314, 0.984314, 1 )
text = "[Title]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Node2D" parent="."]
position = Vector2( 0, 133 )

[node name="Background" type="Sprite" parent="Description"]
texture = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Description"]
margin_left = -150.0
margin_top = -92.0
margin_right = 150.0
margin_bottom = 92.0
rect_min_size = Vector2( 300, 184 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[Description]"
text = "[Description]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Node2D" parent="."]
position = Vector2( -173, -248 )

[node name="Background" type="Sprite" parent="Cost"]
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Cost"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 48 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="FocusButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -257.0
margin_right = 182.0
margin_bottom = 257.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="mouse_entered" from="FocusButton" to="." method="make_focused"]
[connection signal="mouse_exited" from="FocusButton" to="." method="make_unfocused"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
